# minimal_client_api

./: README.md  main.py  setup.cfg
algolia_minimal/: health.py
tests/: test_healthclient.py
