[metadata]
name = algolia_minimal
version = 0.1
author = Thomas E
url = https://github.com/slashdevsda/minimal_client_api
description = Algolia Monitoring API Client for Python.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    requests>=2.21,<3.0
    typing>=3.6,<4.0;python_version<"3.5"
python_requires = >=2.7, !=3.0.*, !=3.1.*', !=3.2.*, !=3.3.*'

# [options.packages.find]
# exclude =
#     tests
#     *.tests
#     *.tests.*
#     tests.*

[bdist_wheel]
universal = 1
